--- a/index.html
+++ b/index.html
@@ -377,18 +377,18 @@
                             </div>
                             <!-- .portfolio-details -->
                         </div>
-                        <!-- .grid-item -->
 
-                        <div class="grid-item grid-item--height2 grid-item--width2 cols-4 background-image ">
-                            <img src="images/portfolio/10.jpg " alt="Portfolio Image ">
-                            <a class="strip " href="images/portfolio/10.jpg ">
+                        <!-- .grid-item -->
+                        <div class="grid-item grid-item--width2 cols-4 background-image ">
+                            <img width="1500" height="auto" src="images/portfolio/dietCheater.jpeg " alt="Diet Cheater ">
+                            <a class="strip " href="https://marmada.github.io/Train-Scheduler/" target="_blank">
                                 <div class="portfolio-overlay "></div>
                             </a>
                             <div class="portfolio-details ">
                                 <div class="portfolio-title ">
                                     <div class="craste-ovh ">
                                         <h3>
-                                            <a href="# ">Brilliant sceptre</a>
+                                            <a href="https://mighty-plateau-27650.herokuapp.com/" target="_blank">Diet Cheater</a>
                                         </h3>
                                     </div>
                                     <!-- .craste-ovh -->
@@ -397,26 +397,7 @@
                             </div>
                             <!-- .portfolio-details -->
                         </div>
-                        <!-- .grid-item -->
 
-                        <div class="grid-item cols-4 grid-item--width2 background-image ">
-                            <img src="images/portfolio/15.jpg " alt="Portfolio Image ">
-                            <a class="strip " href="images/portfolio/15.jpg ">
-                                <div class="portfolio-overlay "></div>
-                            </a>
-                            <div class="portfolio-details ">
-                                <div class="portfolio-title ">
-                                    <div class="craste-ovh ">
-                                        <h3>
-                                            <a href="# ">Stone of the stone</a>
-                                        </h3>
-                                    </div>
-                                    <!-- .craste-ovh -->
-                                </div>
-                                <!-- .portfolio-title -->
-                            </div>
-                            <!-- .portfolio-details -->
-                        </div>
                         <!-- .grid-item -->
 
                     </div>
@@ -431,78 +412,12 @@
     <!-- .craste-portfolio-area -->
 
 
-    <!-- ============================================================================ -->
-    <!-- ================================= Services ================================= -->
-    <!-- ============================================================================ -->
-
-    <section class="craste-services-area darker-bg " id="services ">
-        <div class="container-fluid ">
-            <div class="row craste-shrink ">
-                <div class="col-sm-2 col-12 ">
-                    <div class="section-heading-wrapper ">
-                        <h5 class="section-heading ">Services</h5>
-                    </div>
-                </div>
-                <!-- .col-sm-2 col-12 -->
-                <div class="col-sm-8 col-12 ">
-                    <div class="craste-services ">
-                        <h2 class="section-description ">As a web developer, I offer some great services to deal with me to work</h2>
-
-                        <div class="craste-services-wrapper ">
-                            <div class="row ">
-                                <div class="col-md-6 col-12 ">
-                                    <div class="single-service ">
-                                        <h5>Brading</h5>
-                                        <p>Contrary to popular belief, Lorem Ipsum not simply random text</p>
-                                    </div>
-                                    <!-- .single-service -->
-                                </div>
-                                <!-- .col-md-6 .col-12 -->
-                                <div class="col-md-6 col-12 ">
-                                    <div class="single-service ">
-                                        <h5>Marketing</h5>
-                                        <p>Contrary to popular belief, Lorem Ipsum not simply random text</p>
-                                    </div>
-                                    <!-- .single-service -->
-                                </div>
-                                <!-- .col-md-6 .col-12 -->
-                                <div class="col-md-6 col-12 ">
-                                    <div class="single-service ">
-                                        <h5>Developing</h5>
-                                        <p>Contrary to popular belief, Lorem Ipsum not simply random text</p>
-                                    </div>
-                                    <!-- .single-service -->
-                                </div>
-                                <!-- .col-md-6 .col-12 -->
-                                <div class="col-md-6 col-12 ">
-                                    <div class="single-service ">
-                                        <h5>Photography</h5>
-                                        <p>Contrary to popular belief, Lorem Ipsum not simply random text</p>
-                                    </div>
-                                    <!-- .single-service -->
-                                </div>
-                                <!-- .col-md-6 .col-12 -->
-                            </div>
-                            <!-- .row -->
-                        </div>
-                        <!-- .craste-services-wrapper -->
-                    </div>
-                    <!-- .craste-services -->
-                </div>
-                <!-- .col-sm-8 .offset-sm-1 .col-12 -->
-            </div>
-            <!-- .row -->
-        </div>
-        <!-- .container-fluid -->
-    </section>
-    <!-- .craste-services-area -->
-
 
     <!-- ============================================================================ -->
     <!-- ================================== Resume ================================== -->
     <!-- ============================================================================ -->
 
-    <section class="craste-resume-area dark-bg " id="resume ">
+    <section class="craste-resume-area darker-bg " id="resume ">
         <div class="container-fluid ">
             <div class="row craste-shrink ">
                 <div class="col-sm-2 col-12 ">
@@ -513,7 +428,7 @@
                 <!-- .col-sm-2 col-12 -->
                 <div class="col-sm-8 col-12 ">
                     <div class="craste-resume ">
-                        <h2 class="section-description ">As a web developer, My personal details here to explore more about me</h2>
+                        <h2 class="section-description "> My education and professional details here to explore more about me</h2>
 
                         <div class="craste-resume-details ">
                             <div class="row ">
@@ -521,17 +436,26 @@
                                     <h3>Education</h3>
                                     <div class="single-resume-details ">
                                         <h4>UI/UX Course</h4>
-                                        <h5>University of teach studio</h5>
-                                        <h6>2010 - 2014</h6>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing. Ut elit tellus, luctus nec ullamcorper
+                                        <h5>University of Arizona</h5>
+                                        <h6>2018</h6>
+                                        <p>HTML5, CSS3, JavaScript, jQuery, Bootstrap, Express.js, React.js, Node.js, Database Theory, MongoDB, MySQL, Command Line, Git
                                         </p>
                                     </div>
                                     <!-- .single-resume-details -->
                                     <div class="single-resume-details ">
-                                        <h4>Web Development</h4>
-                                        <h5>University of teach studio</h5>
-                                        <h6>2010 - 2014</h6>
-                                        <p class="mb0 ">Lorem ipsum dolor sit amet, consectetur adipiscing. Ut elit tellus, luctus nec ullamcorper
+                                        <h4>Master in Engineering, Quality and Productivity</h4>
+                                        <h5>Monterrey Institute of Technology and Higher Education</h5>
+                                        <h6>2010 - 2012</h6>
+                                        <p class="mb0 ">
+                                        </p>
+                                    </div>
+                                    <!-- .single-resume-details -->
+                                    <!-- .single-resume-details -->
+                                    <div class="single-resume-details ">
+                                        <h4>B.S Industrial Engineering</h4>
+                                        <h5>Monterrey Institute of Technology and Higher Education</h5>
+                                        <h6>2000 - 2004</h6>
+                                        <p class="mb0 ">
                                         </p>
                                     </div>
                                     <!-- .single-resume-details -->
@@ -540,20 +464,14 @@
                                 <div class="col-md col-12 ">
                                     <h3>Experience</h3>
                                     <div class="single-resume-details ">
-                                        <h4>Web Design</h4>
-                                        <h5>University of teach studio</h5>
-                                        <h6>2010 - 2014</h6>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing. Ut elit tellus, luctus nec ullamcorper
+                                        <h4>Netsuite System Engineering</h4>
+                                        <h5>Level 3 Audiovisual</h5>
+                                        <h6>2017 - Present</h6>
+                                        <p>User Support and database management, Custom Development & Continuous System Improvements, Data Analytics, Project Management for External Modules Implementation
                                         </p>
                                     </div>
                                     <!-- .single-resume-details -->
-                                    <div class="single-resume-details ">
-                                        <h4>UI/UX Course</h4>
-                                        <h5>University of teach studio</h5>
-                                        <h6>2010 - 2014</h6>
-                                        <p class="mb0 ">Lorem ipsum dolor sit amet, consectetur adipiscing. Ut elit tellus, luctus nec ullamcorper
-                                        </p>
-                                    </div>
+
                                     <!-- .single-resume-details -->
                                 </div>
                                 <!-- .col-md .col-12 -->
@@ -577,7 +495,7 @@
     <!-- ================================ Testimonail =============================== -->
     <!-- ============================================================================ -->
 
-    <section class="craste-testimonial-area darker-bg " id="testimonial ">
+    <section class="craste-testimonial-area dark-bg " id="testimonial ">
         <div class="container-fluid ">
             <div class="row craste-shrink ">
                 <div class="col-sm-2 col-12 ">
