--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                                 <div class="portfolio-title ">
                                     <div class="craste-ovh ">
                                         <h3>
-                                            <a href="https://mighty-plateau-27650.herokuapp.com/" target="_blank">Diet Cheater</a>
+                                            <a href="https://secure-scrubland-83810.herokuapp.com/" target="_blank">Diet Cheater</a>
                                         </h3>
                                     </div>
                                     <!-- .craste-ovh -->
