--- a/index.html
+++ b/index.html
@@ -75,21 +75,7 @@
                                     <li>
                                         <a href="#portfolio">Portfolio</a>
                                     </li>
-                                    <li>
-                                        <a href="#services">Services</a>
-                                    </li>
-                                    <li>
-                                        <a href="#resume">Resume</a>
-                                    </li>
-                                    <li>
-                                        <a href="#testimonial">Testimonial</a>
-                                    </li>
-                                    <li>
-                                        <a href="#blog">Blog</a>
-                                    </li>
-                                    <li>
-                                        <a href="#partner">Partner</a>
-                                    </li>
+
                                     <li>
                                         <a href="#contact">Contact</a>
                                     </li>
@@ -573,23 +559,18 @@
                     <div class="footer ">
                         <ul>
                             <li>
-                                <a href="# ">
-                                    <i class="fab fa-facebook-f "></i>
+                                <a href="https://github.com/marmada">
+                                    <i class="fab fa-github"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="# ">
-                                    <i class="fab fa-twitter "></i>
+                                <a href="https://www.linkedin.com/in/miriam-armada-blumer-1500b416/">
+                                    <i class="fab fa-linkedin"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="# ">
-                                    <i class="fab fa-dribbble "></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="# ">
-                                    <i class="fab fa-instagram "></i>
+                                <a href="https://stackexchange.com/users/12722447/marmada">
+                                    <i class="fab fa-stack-overflow"></i>
                                 </a>
                             </li>
                         </ul>
